--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header">
 				<picture>
 					 <source class="logo" srcset="images/logo.jxl" type="image/jxl"></source>
-					 <img class="thumbnail" srcset="logo.png">
+					 <img class="logo" srcset="images/logo.png">
 				</picture>
         <img class="logo" src="images/logo.png" alt="SCT Studios">
       </div>
