--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <header>
       <div class="header">
 				<picture>
-					 <source class="logo" srcset="images/logo.jxl" type="image/jxl"></source>
+					 <source class="logo" srcset="images/logo.jxl" type="image/jxl">
 					 <img class="logo" srcset="images/logo.png">
 				</picture>
-        <img class="logo" src="images/logo.png" alt="SCT Studios">
       </div>
     </header>
     <main>
@@ -24,7 +23,7 @@
         <div class="product">
 					<a target="_blank" href="https://www.youtube.com/watch?v=HRnZognnUlk">
 					    <picture>
-					       <source class="thumbnail" srcset="images/TrueRealism_HD.jxl" type="image/jxl"></source>
+					       <source class="thumbnail" srcset="images/TrueRealism_HD.jxl" type="image/jxl">
 					       <img class="thumbnail" srcset="images/TrueRealism_HD.jpg">
 					    </picture>
 					</a>
